// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Inference: Literals > Boolean: true >=> Boolean 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "true",
    "type": "Bool",
  },
}
`;

exports[`Inference: Literals > Row: Row >=> Type 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "Row",
    "type": "Type",
  },
}
`;

exports[`Inference: Literals > String: "hello" >=> String 1`] = `
{
  "displays": {
    "constraints": [],
    "term": ""hello"",
    "type": "String",
  },
}
`;

exports[`Inference: Literals > Type: Type >=> Type 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "Type",
    "type": "Type",
  },
}
`;

exports[`Inference: Literals > Unit: ! >=> Unit 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "unit",
    "type": "Unit",
  },
}
`;

exports[`Inference: Literals > numbers: 1 >=> Num 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "1",
    "type": "Num",
  },
}
`;
